Fixed Dark Mode

--- a/styles.css
+++ b/styles.css
@@ -207,9 +207,9 @@ img.sport-icon {
 }
 
 .color-circle {
-    width: 1em;
+    width: 2.25em;
     height: 1em;
-    border-radius: 50%;
+    border-radius: 10px;
     border: 1px solid rgb(218, 218, 218);
     flex-shrink: 0;
 }
